# ece408

./: .gitignore  CMakeLists.txt  README.md  install.wsl2.md
imp/: mp0.cu  mp1.cu  mp3.cu  mp4.cu  mp6.cu
lab_description/: mp06_tiled_2D_convolution.md
mynotes/: MP1.md  MP3.md  MP3_tiled_matrix_multiply.md  MP6_tiled_2D_convolution.md  ptx isa.md  texture.md
templates/: mp0_template.cu  mp2_template.cu  mp3_template.cu
test_data/mp03/1/: input0.raw  input1.raw  output.raw
test_data/mp04/1/: input.raw  output.raw
